# vespa

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Taskfile.yaml  vcpkg.json
cli/: CMakeLists.txt  go.mod
cli/cmd/vespa/: vespa
cli/include/: CMakeLists.txt
cli/src/: CMakeLists.txt
cmake/: Wayland.cmake  Zig.cmake  wasm3.cmake
cmd/: CMakeLists.txt
cmd/cli/: CMakeLists.txt  go.mod
cmd/cli/cmd/vespa/: main.go
cmd/cli/internal/ipc/: message.go
cmd/comb/: CMakeLists.txt  main.c
cmd/hive/: CMakeLists.txt  build.zig  client.c  main.c  main.zig
cmd/hive/include/: CMakeLists.txt  process.h
cmd/hive/src/: orchestrator.c
cmd/queen/: CMakeLists.txt  build.zig  main.c  main.zig
cmd/queen/include/: CMakeLists.txt  supervisor.h
cmd/queen/src/: supervisor.c
cmd/worker/: .gitignore  CMakeLists.txt  build.zig  build.zig.zon  main.c  main.zig
cmd/worker/include/: worker.h
cmd/worker/src/: event_loop.zig  worker.c
comb/: CMakeLists.txt
comb/include/: CMakeLists.txt
comb/src/: CMakeLists.txt
core/src/: CMakeLists.txt
hive/: main.c
hive/include/: orchestrator.h
hive/src/: CMakeLists.txt  process.c
ipc/include/: CMakeLists.txt
ipc/src/: CMakeLists.txt  client.c  server.c
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/include/: CMakeLists.txt  log.h  supervised_process.h  vespa.h.in
lib/core/src/: supervised_process.c  supervised_process_def.h  vespa.c
lib/ipc/: CMakeLists.txt
lib/ipc/include/: ipc.h
lib/ipc/src/: client.c  common.h  event.c  server.c
lib/manifest/: CMakeLists.txt
lib/manifest/include/: manifest.h
lib/protocol/: event.fbs  protocol.fbs
lib/render-ipc/: CMakeLists.txt
lib/render-ipc/include/: CMakeLists.txt  render_command.h
lib/render-ipc/src/: CMakeLists.txt  render_command.c  render_command_def.h  render_command_linux.c
lib/renderer/: CMakeLists.txt
lib/renderer/include/: CMakeLists.txt  renderer.h
lib/renderer/src/: CMakeLists.txt  renderer.c  renderer_def.h  renderer_vk.c
lib/sandbox/: CMakeLists.txt
lib/sandbox/include/: CMakeLists.txt  sandbox.h
lib/sandbox/src/: CMakeLists.txt  sandbox.c  sandbox_bindings.c  sandbox_def.h  sandbox_wasm.c  util.c  util.h
lib/supervisor/: CMakeLists.txt
lib/supervisor/include/: CMakeLists.txt  supervisor.h
lib/supervisor/src/: CMakeLists.txt  supervised_process_def.h  supervisor.c  supervisor_def.h  supervisor_kill.c  supervisor_process.c  supervisor_spawn.c
lib/worker-runtime/: CMakeLists.txt
lib/worker-runtime/include/: CMakeLists.txt  worker.h
lib/worker-runtime/src/: CMakeLists.txt  worker.c
lib/xdg-shell/: CMakeLists.txt
manifest/include/: CMakeLists.txt
manifest/src/: CMakeLists.txt  manifest.c  manifest_json.cc  manifest_yaml.c
protocol/: CMakeLists.txt  error.fbs
queen/src/: CMakeLists.txt  supervisor.c
widgets/: CMakeLists.txt
widgets/wasm-c-example/: CMakeLists.txt  main.c
widgets/wasm-c-sdk/: CMakeLists.txt
widgets/wasm-c-sdk/include/: CMakeLists.txt  vespa_sdk.h
widgets/wasm-c-sdk/src/: CMakeLists.txt  sdk.c
widgets/wasm-test/: CMakeLists.txt  lib.c
widgets/wasm-zig-example/: CMakeLists.txt  build.zig  build.zig.zon  main.zig
widgets/wasm-zig-sdk/: build.zig  build.zig.zon
widgets/wasm-zig-sdk/src/: root.zig
worker/: CMakeLists.txt  main.c
worker/include/: CMakeLists.txt
worker/src/: CMakeLists.txt
